# ChangeLog for media-libs/ethumb
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Apr 2009; evadim <evadim@evadim.ru>
  +media-gfx/image-viewer/metadata.xml, +media-libs/ethumb/metadata.xml:
  initial commit
