@@ -1,3 +1,3 @@
-EBUILD ethumb-9999.ebuild 292 RMD160 fb121c1ffaf8fce52120aa1c99c196b0da3f475d SHA1 0be6905675aaef813f71d7721e32a5baf77334dc SHA256 d32878a3a257a9fd2b374622841e98440b93fb166cd17f84b62ec3f691cb821e
+EBUILD ethumb-9999.ebuild 577 RMD160 9fe57f25834766000dd9da322721149ce660e8c9 SHA1 8b0ed280935192d65ecf4b974e796486675404b7 SHA256 7660f0af4ae64d8d33e8b60c89ccf81deb728b3a6e3baa3a13ff92cf7d585282
 MISC ChangeLog 250 RMD160 6b0afea264487b8fd7839c695a88430f725bb4fc SHA1 d30db453aae9a191dd8b04fec7dde4d3074fb260 SHA256 aaa010c4fba713a531947437b32021835e70dbf0af62d786c17b6ed9343d46c8
 MISC metadata.xml 228 RMD160 1890a2965ed780e661e20adcfc4f4cce5f7ca8e9 SHA1 777d2a3ad7f7075c7e75fa5055f3941440e4e875 SHA256 42ea435327140212f3beb05aafebad5053cbad84532f9bb78987de8540c6459a
