@@ -7,11 +7,23 @@ inherit enlightenment
 
 DESCRIPTION="Thumbnailing Library"
 
-IUSE=""
+IUSE="pdf emotion"
 
-DEPEND="x11-libs/ecore
-	x11-libs/evas
-	media-libs/edje"
+DEPEND=">=dev-libs/eina-9999
+	>=x11-libs/ecore-9999
+	>=x11-libs/evas-9999
+	>=media-libs/edje-9999
+	emotion? ( >=media-libs/emotion-9999 )
+	pdf? ( >=app-text/epdf-9999 )
+	"
 
 RDEPEND="${DEPEND}"
 
+src_compile() {
+
+	export MY_ECONF="
+                $(use_enable pdf epdf) \
+                $(use_enable emotion emotion) \
+		"
+	enlightenment_src_compile
+}
