@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  22 Apr 2009; evadim <evadim@evadim.ru> ethumb-9999.ebuild:
+  add pdf & emotion USE flags
+
   12 Apr 2009; evadim <evadim@evadim.ru>
   +media-gfx/image-viewer/metadata.xml, +media-libs/ethumb/metadata.xml:
   initial commit
